few changes privious field